# hypergo

./: .gitignore  .graph.gv  BACKLOG.md  None  README.md  RELEASE_NOTES.md  __main__.py  azure_service_bus_message.py  config.yaml  delete.md  dev-requirements.txt  dict_message.py  lint.sh  message.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
.hypergo_storage/passbyreference/: storagekey_9bf7a467d778728289abf2d2c94c149b  storagekey_d234ebb457ec17af8aa63253de59e915  storagekey_d8e2800e23b76b4b58950370b17c312f
.hypergo_storage/transactions/: transactionkey_20230908155504933845f8086bb7  transactionkey_202309081557438362821ab97434  transactionkey_202310301812303489580ec35243  (+8 more)
azure/: requirements.txt
hypergo/: __main__.py  azure_service_bus_connection.py  azure_service_bus_executor.py  config.py  configuration.py  connection.py  context.py  csv_test_data.csv  custom_types.py  executor.py  graph.py  hypergo_cli.py  hypergo_click.py  hypergo_cmd.py  key_value_store.py  local_storage.py  logger.py  mapping.py  message.py  monitor.py  monitor_custom_metrics.py  monitors.py  sandbox.py  secrets.py  service_bus_connection.py  stdio_connection.py  storage.py  transaction.py  transform.py  utility.py  version.py
src/: version.py
tests/: test.json  test.yaml  test_azure_logger.py  test_azure_monitor.py  test_dynamic_input_bindings.py  test_dynamic_routing_key.py  test_executor.py  test_local_storage.py  test_message.py  test_monitors.py  test_stdio_monitor.py  test_storage.py  test_utility.py  test_utility_serialization.py
(+29 files in other folders)
