[metadata]
name = hypergo
version = 0.3.16
description = Project for service bus
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyyaml
    glom
    pydash
    click
    azure-servicebus
    azure-functions
    dill
    ansicolors
    click-default-group
    graphviz
    urllib3<2.0
    cryptography
    freezegun
    requests
    azure-monitor-opentelemetry
    opentelemetry-api
    opentelemetry-distro
    opentelemetry-exporter-otlp
    opentelemetry-instrumentation
    opentelemetry-sdk
    opentelemetry-instrumentation
    opentelemetry-resource-detector-azure
    opentelemetry-semantic-conventions
    psutil
    mock
    freezegun
    line-profiler
